--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,20 +1,20 @@
-# Use a lightweight official Python image
+# Use official Python image
 FROM python:3.11-slim
 
-# Set working directory inside container
+# Set working directory
 WORKDIR /app
 
-# Copy only requirements file first (for caching layer)
-COPY app/requirements.txt .
+# Copy requirements.txt from the correct path
+COPY backend/requirements.txt .
 
 # Install Python dependencies
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copy the backend app code into the container
-COPY app/ .
+# Copy the actual app code
+COPY backend/app/ .
 
-# Expose FastAPI default port
+# Expose FastAPI port
 EXPOSE 8000
 
-# Run the FastAPI app using Uvicorn
-CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
+# Run the app
+CMD ["python", "-m", "main"]
